--- a/app/streamlit.css
+++ b/app/streamlit.css
@@ -9,6 +9,13 @@ body {
   font-weight:bold
 }
 
+.film-title{width:50;
+  text-align:center;
+  font-size:1.5rem;
+  line-height: 2rem;
+  padding-right: 2rem;
+}
+
 /* Container des filtres page principale */
 .main-box{
   border: 1px solid rgba(0,0,0,0.12);
